# f1-data-downloader

./: grand_prix.json  pyproject.toml
.github/workflows/: download_and_parse.yml  manual.yml
f1_data_downloader/: main.py
f1_data_downloader/parser/: parse_quali.py  parse_race_classification.py  parse_starting_grid.py  utils.py
