[project]
name = "f1-data-downloader"
version = "0.1.0"
description = "A python script to download FIA documents on a specific race and parse the PDF files to convert it to usefull csv data."
authors = [
    {name = "Thibault Cheneviere",email = "thibault.chene23@gmail.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]
